# typingvid

./: LICENSE  README.md  keyboard_animations.py  pyproject.toml  typingvid.py
layouts/: azerty.yml  dvorak.yml  en.yml  engr.yml  enjp.yml  gr.yml  jp.yml  qwerty_azerty.yml  qwerty_dvorak.yml
