[tool.poetry]
name = "typingvid"
version = "0.1.0"
description = "An open-source, simple but extensible typing animation generator."
authors = ["Konstantinos Gavalas <contact@gavalas.dev>"]
license = "MIT"
readme = "README.md"
include = ["layouts/*", "assets/*"]
homepage = "https://www.gavalas.dev/projects/typingvid"
repository = "https://github.com/GavalasDev/typingvid"
keywords = ["keyboard", "animation", "command-line utility"]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
PyYAML = "^6.0"
bs4 = "^0.0.1"
CairoSVG = "^2.5.2"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
typingvid = 'typingvid:main'
